# SentinelX

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  IMPLEMENTATION.md  Makefile  README.md  STATUS.md  docker-compose.yml  rust.md
sentinel-client/: Cargo.toml  config.toml
sentinel-client/src/: config.rs  encryption.rs  iptables.rs  limiter.rs  main.rs  monitor.rs  proxy.rs  register.rs  relay.rs  stats.rs  websocket.rs
sentinel-common/: Cargo.toml
sentinel-common/src/: crypto.rs  lib.rs  protocol.rs  types.rs
sentinel-server/: Cargo.toml  config.toml
sentinel-server/migrations/: 001_create_tables.sql
sentinel-server/src/: config.rs  main.rs  manager.rs
sentinel-server/src/api/: mod.rs
sentinel-server/src/db/: mod.rs
sentinel-ui/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
sentinel-ui/src/: App.tsx  frontend.tsx  index.css  index.html  output.css
sentinel-ui/src/api/: rpc-client.ts
sentinel-ui/src/components/: Dashboard.tsx  LoginPage.tsx  ProtectedRoute.tsx
sentinel-ui/src/context/: AuthContext.tsx
sentinel-ui/src/lib/: api.ts  utils.ts
sentinel-ui/src/pages/: ClientsPage.tsx  Dashboard.tsx  IptablesPage.tsx  MetricsPage.tsx  RelaysPage.tsx
sentinel-ui/src/types/: index.ts
