[workspace]
members = [
    "sentinel-client",
    "sentinel-server",
    "sentinel-common",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
config = "0.14"
async-trait = "0.1"