[package]
name = "sentinel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-common = { path = "../sentinel-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Network
tokio-tungstenite = "0.24"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
tower = "0.5"
futures-util = "0.3"
bytes = "1.9"

# TLS/Encryption
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
rand = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# System
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
sysinfo = "0.32"
chrono = "0.4"

# Rate limiting & stats
governor = "0.8"
metrics = "0.24"
prometheus = "0.13"
parking_lot = "0.12"

# Config
config = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["client", "http-client"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
hostname = "0.4"