[package]
name = "sentinel-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"